--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,4 +1,10 @@
-#test{
-    font-size: 36px;
-    color: yellow;
+form {
+    margin-bottom: 15px;
 }
+
+
+#name{
+    font-size: 24px;
+    font-weight: bold;
+}
+
