--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -14,17 +14,71 @@ body,html {
 }
 
 form {
-    margin-bottom: 15px;
+    margin-top: 10px;
+    margin-right: 10px;
+}
+
+#cityName {
+    background-color: rgba(255, 255, 255, 0.4);
+    border-radius: 0.5rem;
+    border: none;
+    outline: none;
+    font-size: 1.5rem;
+    font-family: 'Cambria';
+    font-style: italic;
+}
+
+form::before {
+    display: inline-block;
+    height: 30px;
+    width: 30px;
+    content: "";
+    background-size: cover;
+    background-image: url(images/search.png);
+    vertical-align: middle;
 }
 
 
+button {
+    display: none;
+}
+
 #name{
-    font-size: 24px;
+    font-size: 50px;
     font-weight: bold;
+}
+
+#conditions {
+    font-size: 30px;
+}
+
+#weather-display {
+    font-family: 'Merriweather', serif;
+    display: flex;
+    align-self: center;
+    margin-left: 25%;
+    margin-bottom: 10%;
+    background-color: rgb(56, 56, 56);
+    color: white;
+    padding: 40px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+#left-side {
+    border-right: 2px solid white;
+    padding-right: 10px;
+}
+
+#right-side {
+    padding-left: 10px;
+    font-size: 20px;
 }
 
 body {
     height: 100vh;
+    display: flex;
+    justify-content: space-between;
     background-repeat: no-repeat;
     background-image: var(--cloudy);
     background-size: cover;
