--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -14,29 +14,49 @@ body,html {
 }
 
 form {
-    margin-top: 10px;
-    margin-right: 10px;
+    margin-top: 13px;
+    margin-right: 15px;
 }
 
 #cityName {
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: rgba(56, 56, 56, 0.3);
     border-radius: 0.5rem;
     border: none;
     outline: none;
-    font-size: 1.5rem;
-    font-family: 'Cambria';
-    font-style: italic;
+    font-size: 1.0rem;
+    padding: 13px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+
+input {
+    color: white;
+}
+
+::placeholder {
+    color: rgb(224, 224, 224);
+}
+
+input:focus::placeholder {
+    color: transparent;
+
 }
 
 form::before {
     display: inline-block;
-    height: 30px;
-    width: 30px;
+    height: 32px;
+    width: 32px;
     content: "";
+
     background-size: cover;
-    background-image: url(images/search.png);
     vertical-align: middle;
 }
+
+input {
+    font-family: "Lucida Console", "Courier New", monospace;
+}
+
 
 
 button {
@@ -56,13 +76,13 @@ button {
     font-family: 'Merriweather', serif;
     display: flex;
     align-self: center;
-    margin-left: 25%;
-    margin-bottom: 10%;
-    background-color: rgb(56, 56, 56);
+    background-color: rgb(56, 56, 56, 0.4);
     color: white;
     padding: 40px;
     padding-top: 50px;
     padding-bottom: 50px;
+    margin-left: 25%;
+    margin-bottom: 6%;
 }
 
 #left-side {
@@ -74,6 +94,46 @@ button {
     padding-left: 10px;
     font-size: 20px;
 }
+
+#temp::before, #tempLike::before {
+    display: inline-block;
+    height: 32px;
+    width: 32px;
+    content: "";
+    background-size: cover;
+    margin-right: 2px;
+    background-image: url(images/temperature.png);
+    vertical-align: middle;
+}
+
+#conditions {
+    text-decoration: underline;
+}
+
+#humidity::before {
+    display: inline-block;
+    height: 32px;
+    margin-right: 2px;
+    width: 32px;
+    content: "";
+    background-size: cover;
+    background-image: url(images/humidity.png);
+    vertical-align: middle;
+}
+
+
+#wind::before {
+    display: inline-block;
+    height: 32px;
+    width: 32px;
+    content: "";
+    margin-right: 2px;
+    background-size: cover;
+    background-image: url(images/wind.png);
+    vertical-align: middle;
+}
+
+
 
 body {
     height: 100vh;
