--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -11,13 +11,16 @@
 body,html {
     margin: 0;
     padding: 0;
-    min-width: 1000px;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+
 }
 
 
 form {
-    margin-top: 13px;
-    margin-right: 15px;
+    margin-top: 1%;
+    margin-right: 2%;
 }
 
 #cityName {
@@ -145,4 +148,35 @@ body {
     background-image: var(--cloudy);
     background-size: cover;
     background-position: center;
+}
+
+@media (max-width: 550px) {
+    body {
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content: space-between;
+        align-items: center;
+        
+    }
+    #weather-display {
+        align-self: center;
+        margin-left: 0;
+        margin-bottom: 20%;
+        padding: 15px;
+        padding-top: 17px;
+        padding-bottom: 17px;
+    }
+  
+}
+
+@media (max-width:1000px) and (min-width: 551px) {
+    body {
+        gap: 10px;
+    }
+    form {
+        margin-right: 0;
+    }
+    #weather-display {
+        margin-left: 0;
+    }
 }
