--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,193 +1,160 @@
 :root {
-    --cloudy:  url(images/cloudy.jpg);
-    --rainy:  url(images/rainy.jpg);
-    --sunny: url(images/sunny.jpg);
-    --smog: url(images/smog.jpg);
-    --misty: url(images/misty.jpg);
-    --snowy: url(images/snowy.jpg);
-    --thunder: url(images/thunderstorm.jpg);
+  --cloudy: url(images/cloudy.jpg);
+  --rainy: url(images/rainy.jpg);
+  --sunny: url(images/sunny.jpg);
+  --smog: url(images/smog.jpg);
+  --misty: url(images/misty.jpg);
+  --snowy: url(images/snowy.jpg);
+  --thunder: url(images/thunderstorm.jpg);
 }
 
-body,html {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-
+%icon-display {
+  display: inline-block;
+  height: 32px;
+  width: 32px;
+  content: "";
+  background-size: cover;
+  margin-right: 4px;
+  vertical-align: middle;
 }
 
+body,
+html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
+body {
+  display: flex;
+  justify-content: space-between;
+  background-repeat: no-repeat;
+  background-image: var(--cloudy);
+  background-size: cover;
+  background-position: center;
+}
 
 form {
-    margin-top: 1%;
-    margin-right: 2%;
+  margin-top: 1%;
+  margin-right: 2%;
 }
 
 #cityName {
-    background-color: rgba(56, 56, 56, 0.3);
-    border-radius: 0.5rem;
-    border: none;
-    outline: none;
-    font-size: 1.0rem;
-    padding: 13px;
-    padding-left: 10px;
-    padding-right: 10px;
+  background-color: rgba(56, 56, 56, 0.3);
+  border-radius: 0.5rem;
+  border: none;
+  outline: none;
+  font-size: 1rem;
+  padding: 13px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
-
 input {
-    color: white;
+  color: white;
+  font-family: "Lucida Console", "Courier New", monospace;
 }
 
 ::placeholder {
-    color: rgb(224, 224, 224);
+  color: rgb(224, 224, 224);
 }
 
 input:focus::placeholder {
-    color: transparent;
-
+  color: transparent;
 }
-
-form::before {
-    display: inline-block;
-    height: 32px;
-    width: 32px;
-    content: "";
-
-    background-size: cover;
-    vertical-align: middle;
-}
-
-input {
-    font-family: "Lucida Console", "Courier New", monospace;
-}
-
-
 
 button {
-    display: none;
-}
-
-#name{
-    font-size: 50px;
-    font-weight: bold;
-}
-
-#conditions {
-    font-size: 30px;
+  display: none;
 }
 
 #weather-display {
-    font-family: 'Merriweather', serif;
-    display: flex;
-    align-self: center;
-    background-color: rgb(56, 56, 56, 0.4);
-    color: white;
-    padding: 40px;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    margin-left: 25%;
-    margin-bottom: 6%;
+  font-family: "Merriweather", serif;
+  display: flex;
+  align-self: center;
+  background-color: rgb(56, 56, 56, 0.4);
+  color: white;
+  padding: 40px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  margin-left: 25%;
+  margin-bottom: 6%;
 }
 
 #left-side {
-    border-right: 2px solid white;
-    padding-right: 10px;
+  border-right: 2px solid white;
+  padding-right: 10px;
 }
 
-#right-side {
-    padding-left: 10px;
-    font-size: 20px;
-}
-
-#temp::before, #tempLike::before {
-    display: inline-block;
-    height: 32px;
-    width: 32px;
-    content: "";
-    background-size: cover;
-    margin-right: 4px;
-    background-image: url(images/temperature.png);
-    vertical-align: middle;
+#name {
+  font-size: 50px;
+  font-weight: bold;
 }
 
 #conditions {
-    text-decoration: underline;
+  text-decoration: underline;
+  font-size: 30px;
+}
+
+#right-side {
+  padding-left: 10px;
+  font-size: 20px;
+}
+
+#temp::before,
+#tempLike::before {
+  @extend %icon-display;
+  background-image: url(images/temperature.png);
 }
 
 #humidity::before {
-    display: inline-block;
-    height: 32px;
-    margin-right: 4px;
-    width: 32px;
-    content: "";
-    background-size: cover;
-    background-image: url(images/humidity.png);
-    vertical-align: middle;
+  @extend %icon-display;
+  background-image: url(images/humidity.png);
 }
-
 
 #wind::before {
-    display: inline-block;
-    height: 32px;
-    width: 32px;
-    content: "";
-    margin-right: 4px;
-    background-size: cover;
-    background-image: url(images/wind.png);
-    vertical-align: middle;
-}
-
-
-
-body {
-    height: 100vh;
-    display: flex;
-    justify-content: space-between;
-    background-repeat: no-repeat;
-    background-image: var(--cloudy);
-    background-size: cover;
-    background-position: center;
+  @extend %icon-display;
+  background-image: url(images/wind.png);
 }
 
 @media (max-width: 360px) {
-    #weather-display {
-        padding: 10px;
-    
-    }
-    #humidity::before, #wind::before, #temp::before, #tempLike::before {
-        display: block;
-    }
+  #weather-display {
+    padding: 10px;
+  }
+  #humidity::before,
+  #wind::before,
+  #temp::before,
+  #tempLike::before {
+    display: block;
+  }
 }
-
 
 @media (max-width: 550px) {
-    body {
-        display: flex;
-        flex-direction: column-reverse;
-        justify-content: space-between;
-        align-items: center;
-        
-    }
-    #weather-display {
-        align-self: center;
-        margin-left: 0;
-        margin-bottom: 50%;
-        padding: 15px;
-        padding-top: 17px;
-        padding-bottom: 17px;
-    }
-  
+  body {
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: space-between;
+    align-items: center;
+  }
+  #weather-display {
+    align-self: center;
+    margin-left: 0;
+    margin-bottom: 50%;
+    padding: 15px;
+    padding-top: 17px;
+    padding-bottom: 17px;
+  }
 }
 
-@media (max-width:1000px) and (min-width: 551px) {
-    body {
-        gap: 10px;
-    }
-    form {
-        margin-right: 0;
-    }
-    #weather-display {
-        margin-left: 0;
-    }
+@media (max-width: 1000px) and (min-width: 551px) {
+  body {
+    gap: 10px;
+  }
+  form {
+    margin-right: 0;
+  }
+  #weather-display {
+    margin-left: 0;
+  }
 }
