--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -88,13 +88,13 @@ button {
 }
 
 #name {
-  font-size: 50px;
+  font-size: 3.125rem;
   font-weight: bold;
 }
 
 #conditions {
   text-decoration: underline;
-  font-size: 30px;
+  font-size: 1.875rem;
 }
 
 #right-side {
