--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -47,9 +47,9 @@ form {
   border: none;
   outline: none;
   font-size: 1rem;
-  padding: 13px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding: 0.813rem;
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
 }
 
 input {
@@ -75,16 +75,16 @@ button {
   align-self: center;
   background-color: rgb(56, 56, 56, 0.4);
   color: white;
-  padding: 40px;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding: 2.5rem;
+  padding-top: 3.125rem;
+  padding-bottom: 3.125rem;
   margin-left: 25%;
   margin-bottom: 6%;
 }
 
 #left-side {
   border-right: 2px solid white;
-  padding-right: 10px;
+  padding-right: 0.625rem;
 }
 
 #name {
@@ -98,8 +98,8 @@ button {
 }
 
 #right-side {
-  padding-left: 10px;
-  font-size: 20px;
+  padding-left: 0.625rem;
+  font-size: 1.25rem;
 }
 
 #temp::before,
@@ -120,7 +120,7 @@ button {
 
 @media (max-width: 360px) {
   #weather-display {
-    padding: 10px;
+    padding: 0.625rem;
   }
   #humidity::before,
   #wind::before,
@@ -141,15 +141,15 @@ button {
     align-self: center;
     margin-left: 0;
     margin-bottom: 50%;
-    padding: 15px;
-    padding-top: 17px;
-    padding-bottom: 17px;
+    padding: 0.938rem;
+    padding-top: 1.063rem;
+    padding-bottom: 1.063rem;
   }
 }
 
 @media (max-width: 1000px) and (min-width: 551px) {
   body {
-    gap: 10px;
+    gap: 0.625rem;
   }
   form {
     margin-right: 0;
